Fixing the extra padding in email field on phone devices

--- a/static/sass/home.scss
+++ b/static/sass/home.scss
@@ -173,7 +173,9 @@ a:hover, a:visited, a:focus, a:active {
     line-height: 38px;
     @include border-radius(4px 0 0 4px !important);
     box-shadow: none;
-    padding-right: 85px;
+    @include media('>=sm') {
+      padding-right: 85px;
+    }
     border: 1px solid #ecf2f7;
     @include media('<=xs') {
       display: none;
@@ -335,7 +337,9 @@ a.nav-logo-wrapper {
     text-align: left;
     line-height: 1.3;
     box-shadow: none;
-    padding-right: 85px;
+    @include media('>=sm') {
+      padding-right: 85px;
+    }
     @include media('<=xs') {
       @include border-radius(4px 4px 0 0 !important);
     }
